--- a/_posts/2021-07-07-1225.html
+++ b/_posts/2021-07-07-1225.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  07, 2021
+title: July 07, 2021
 number: 1225
-label1: White Clover<br> Vancouver -- HNE
+label1: White Clover<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/njzOVig.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
