--- a/_posts/2021-07-08-1226.html
+++ b/_posts/2021-07-08-1226.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  08, 2021
+title: July 08, 2021
 number: 1226
-label1: Wheeping Willow<br> Vancouver -- HNE
+label1: Wheeping Willow<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/bMeQagh.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
