--- a/_posts/2021-07-09-1227.html
+++ b/_posts/2021-07-09-1227.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  09, 2021
+title: July 09, 2021
 number: 1227
-label1: Southern Magnolia<br> Vancouver -- HNE
+label1: Southern Magnolia<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/oUKlla1.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
