--- a/_posts/2021-07-10-1228.html
+++ b/_posts/2021-07-10-1228.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: so delicious 10, 2021
+title: July 10, 2021
 number: 1228
-label1: Cherry<br> Vancouver -- HNE
+label1: Cherry<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/6DC87jS.jpg
-mouse1: BC
+mouse1: so delicious
 image2: 
 mouse2: 
 ---
