--- a/_posts/2021-07-15-1233.html
+++ b/_posts/2021-07-15-1233.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  15, 2021
+title: July 15, 2021
 number: 1233
-label1: Mallard <br> Vancouver -- HNE
+label1: Mallard <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/VbYbucy.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
