--- a/_posts/2021-07-16-1234.html
+++ b/_posts/2021-07-16-1234.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  16, 2021
+title: July 16, 2021
 number: 1234
-label1: Merlin<br> Vancouver -- HNE
+label1: Merlin<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/JP728iX.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
