--- a/_posts/2021-07-17-1235.html
+++ b/_posts/2021-07-17-1235.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  17, 2021
+title: July 17, 2021
 number: 1235
-label1: Western White Pine<br> Squamish -- HNE
+label1: Western White Pine<br> Squamish, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/wYwqgRt.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
