--- a/_posts/2021-07-18-1236.html
+++ b/_posts/2021-07-18-1236.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  18, 2021
+title: July 18, 2021
 number: 1236
-label1: Black Bear cub<br> Whistler -- HNE
+label1: Black Bear cub<br> Whistler, BC -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/jMfulca.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
