--- a/_posts/2021-07-22-1240.html
+++ b/_posts/2021-07-22-1240.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  22, 2021
+title: July 22, 2021
 number: 1240
-label1: Yarrow<br> Vancouver -- HNE
+label1: Yarrow<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/zK4iN4M.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
