--- a/_posts/2021-07-23-1241.html
+++ b/_posts/2021-07-23-1241.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  23, 2021
+title: July 23, 2021
 number: 1241
-label1: Chestnut flower<br> Vancouver -- HNE
+label1: Chestnut flower<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/OpDvWGL.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
