--- a/_posts/2021-07-24-1242.html
+++ b/_posts/2021-07-24-1242.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  24, 2021
+title: July 24, 2021
 number: 1242
-label1: Red-breasted Nuthatch<br> Vancouver -- HNE
+label1: Red-breasted Nuthatch<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/50VmQnb.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
