--- a/_posts/2021-07-25-1243.html
+++ b/_posts/2021-07-25-1243.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  25, 2021
+title: July 25, 2021
 number: 1243
-label1: American Crow <br> Vancouver -- HNE
+label1: American Crow <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/SB0x28k.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
