--- a/_posts/2021-07-27-1245.html
+++ b/_posts/2021-07-27-1245.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  27, 2021
+title: July 27, 2021
 number: 1245
-label1: Eastern Gray Squirrel<br> Vancouver -- HNE
+label1: Eastern Gray Squirrel<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/ebpwzwp.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
