--- a/_posts/2021-07-28-1246.html
+++ b/_posts/2021-07-28-1246.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  28, 2021
+title: July 28, 2021
 number: 1246
-label1: Timothy <br> Vancouver -- HNE
+label1: Timothy <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/EHHsVBp.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
