--- a/_posts/2021-07-29-1247.html
+++ b/_posts/2021-07-29-1247.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  29, 2021
+title: July 29, 2021
 number: 1247
-label1: American Goldfinch<br> Vancouver -- HNE
+label1: American Goldfinch<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/xiJYn3G.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
