--- a/_posts/2021-07-30-1248.html
+++ b/_posts/2021-07-30-1248.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  30, 2021
+title: July 30, 2021
 number: 1248
-label1: Red-shafted Flicker<br> Vancouver -- HNE
+label1: Red-shafted Flicker<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/6zABQR6.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
