--- a/_posts/2021-07-31-1249.html
+++ b/_posts/2021-07-31-1249.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  31, 2021
+title: July 31, 2021
 number: 1249
-label1: White-tailed Ptarmigan <br> Coquihalla -- HNE
+label1: White-tailed Ptarmigan <br> Coquihalla, BC -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/XncJWsp.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
