--- a/_posts/2021-08-01-1250.html
+++ b/_posts/2021-08-01-1250.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  01, 2021
+title: August 01, 2021
 number: 1250
-label1: Hoary Marmot<br> Coquihalla -- HNE
+label1: Hoary Marmot<br> Coquihalla, BC -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/kZ5x4zF.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
