--- a/_posts/2021-08-02-1251.html
+++ b/_posts/2021-08-02-1251.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  02, 2021
+title: August 02, 2021
 number: 1251
-label1: Great Blue Heron<br> Vancouver -- HNE
+label1: Great Blue Heron<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/EHHsVBp.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
