--- a/_posts/2021-08-03-1252.html
+++ b/_posts/2021-08-03-1252.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  03, 2021
+title: August 03, 2021
 number: 1252
-label1: Belted Kingfisher<br> Vancouver -- HNE
+label1: Belted Kingfisher<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/6zABQR6.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
