--- a/_posts/2021-08-04-1253.html
+++ b/_posts/2021-08-04-1253.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  04, 2021
+title: August 04, 2021
 number: 1253
-label1: European Starling<br> Vancouver -- HNE
+label1: European Starling<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/Z0GHtK5.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
