--- a/_posts/2021-08-06-1255.html
+++ b/_posts/2021-08-06-1255.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  06, 2021
+title: August 06, 2021
 number: 1255
-label1: Caspian Tern<br> Bellingham -- HNE
+label1: Caspian Tern<br> Bellingham, WA -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/xwaW9Fy.jpeg
-mouse1: WA
+mouse1: 
 image2: 
 mouse2: 
 ---
