--- a/_posts/2021-08-07-1256.html
+++ b/_posts/2021-08-07-1256.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  07, 2021
+title: August 07, 2021
 number: 1256
-label1: Rhinoceros Auklet<br> San Juan Islands -- HNE
+label1: Rhinoceros Auklet<br> San Juan Islands, WA -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/6uscO8Q.jpg
-mouse1: WA
+mouse1: 
 image2: 
 mouse2: 
 ---
