--- a/_posts/2021-08-08-1257.html
+++ b/_posts/2021-08-08-1257.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  08, 2021
+title: August 08, 2021
 number: 1257
-label1: Pigeon Guillemot<br> San Juan Islands -- HNE
+label1: Pigeon Guillemot<br> San Juan Islands, WA -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/MFsjmEC.jpeg
-mouse1: WA
+mouse1: 
 image2: 
 mouse2: 
 ---
