--- a/_posts/2021-08-10-1259.html
+++ b/_posts/2021-08-10-1259.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  10, 2021
+title: August 10, 2021
 number: 1259
-label1: Gray Catbird<br> Coeur d’Alene -- HNE
+label1: Gray Catbird<br> Coeur d’Alene, ID -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/NoH3AEh.jpeg
-mouse1: ID
+mouse1: 
 image2: 
 mouse2: 
 ---
