--- a/_posts/2021-08-11-1260.html
+++ b/_posts/2021-08-11-1260.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  11, 2021
+title: August 11, 2021
 number: 1260
-label1: Grinnell Glacier<br> Glacier NP -- HNE
+label1: Grinnell Glacier<br> Glacier NP, MT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/mNhSQKG.jpg
-mouse1: MT
+mouse1: 
 image2: 
 mouse2: 
 ---
