--- a/_posts/2021-08-13-1262.html
+++ b/_posts/2021-08-13-1262.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  13, 2021
+title: August 13, 2021
 number: 1262
-label1: Brewer&#39s Sparrow<br> Island Park -- HNE
+label1: Brewer&#39s Sparrow<br> Island Park, ID -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/zy6LBXU.jpeg
-mouse1: ID
+mouse1: 
 image2: 
 mouse2: 
 ---
