--- a/_posts/2021-08-14-1263.html
+++ b/_posts/2021-08-14-1263.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  14, 2021
+title: August 14, 2021
 number: 1263
-label1: American Bison<br> Yellowstone NP -- HNE
+label1: American Bison<br> Yellowstone NP, WY -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/gMkJ331.jpeg
-mouse1: WY
+mouse1: 
 image2: 
 mouse2: 
 ---
