--- a/_posts/2021-08-15-1264.html
+++ b/_posts/2021-08-15-1264.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  15, 2021
+title: August 15, 2021
 number: 1264
-label1: Pink-sided Junco<br> Island Park -- HNE
+label1: Pink-sided Junco<br> Island Park, ID -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/L8mict8.jpeg
-mouse1: ID
+mouse1: 
 image2: 
 mouse2: 
 ---
