--- a/_posts/2021-08-17-1266.html
+++ b/_posts/2021-08-17-1266.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  17, 2021
+title: August 17, 2021
 number: 1266
-label1: Geysers<br> Yellowstone NP -- HNE
+label1: Geysers<br> Yellowstone NP, WY -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/Z4n9PwM.jpeg
-mouse1: WY
+mouse1: 
 image2: 
 mouse2: 
 ---
