--- a/_posts/2021-08-18-1267.html
+++ b/_posts/2021-08-18-1267.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  18, 2021
+title: August 18, 2021
 number: 1267
-label1: Balanced Rock<br> Arches NP -- HNE
+label1: Balanced Rock<br> Arches NP, UT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/Cyx7Jsm.jpeg
-mouse1: UT
+mouse1: 
 image2: 
 mouse2: 
 ---
