--- a/_posts/2021-08-19-1268.html
+++ b/_posts/2021-08-19-1268.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  19, 2021
+title: August 19, 2021
 number: 1268
-label1: Lesser Goldfinch<br> Boulder,  -- HNE
+label1: Lesser Goldfinch<br> Boulder, CO -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/9yWDOuB.jpeg
-mouse1: CO
+mouse1: 
 image2: 
 mouse2: 
 ---
