--- a/_posts/2021-08-20-1269.html
+++ b/_posts/2021-08-20-1269.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  20, 2021
+title: August 20, 2021
 number: 1269
-label1: Plums<br> Golden -- HNE
+label1: Plums<br> Golden, CO -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/yckrZxD.jpeg
-mouse1: CO
+mouse1: 
 image2: 
 mouse2: 
 ---
