--- a/_posts/2021-08-22-1271.html
+++ b/_posts/2021-08-22-1271.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  22, 2021
+title: August 22, 2021
 number: 1271
-label1: Gooseberry<br> Berthoud Pass -- HNE
+label1: Gooseberry<br> Berthoud Pass, CO -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/nR3IJop.jpeg
-mouse1: CO
+mouse1: 
 image2: 
 mouse2: 
 ---
