--- a/_posts/2021-08-23-1272.html
+++ b/_posts/2021-08-23-1272.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  23, 2021
+title: August 23, 2021
 number: 1272
-label1: Blue Jay<br> Boulder -- HNE
+label1: Blue Jay<br> Boulder, CO -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/639Hxry.jpeg
-mouse1: CO
+mouse1: 
 image2: 
 mouse2: 
 ---
