--- a/_posts/2021-08-29-1278.html
+++ b/_posts/2021-08-29-1278.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  29, 2021
+title: August 29, 2021
 number: 1278
-label1: Eastern Kingbird<br> Long Lake, Washtenaw -- HNE
+label1: Eastern Kingbird<br> Long Lake, Washtenaw, MI -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/4GCXhAk.jpeg
-mouse1: MI
+mouse1: 
 image2: 
 mouse2: 
 ---
