--- a/_posts/2021-09-01-1281.html
+++ b/_posts/2021-09-01-1281.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  01, 2021
+title: September 01, 2021
 number: 1281
-label1: Great Egret<br> Lucas -- HNE
+label1: Great Egret<br> Lucas, OH -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/RlFERAX.jpeg
-mouse1: OH
+mouse1: 
 image2: 
 mouse2: 
 ---
