--- a/_posts/2021-09-02-1282.html
+++ b/_posts/2021-09-02-1282.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  02, 2021
+title: September 02, 2021
 number: 1282
-label1: Killdeer<br> Erie -- HNE
+label1: Killdeer<br> Erie, NY -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/emh5Byw.jpeg
-mouse1: NY
+mouse1: 
 image2: 
 mouse2: 
 ---
