--- a/_posts/2021-09-03-1283.html
+++ b/_posts/2021-09-03-1283.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  03, 2021
+title: September 03, 2021
 number: 1283
-label1: Yellow-rumped Warbler flight call<br> Whitefield -- HNE
+label1: Yellow-rumped Warbler flight call<br> Whitefield, NH -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/UvevfMh.jpeg
-mouse1: NH
+mouse1: 
 image2: 
 mouse2: 
 ---
