--- a/_posts/2021-09-04-1284.html
+++ b/_posts/2021-09-04-1284.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  04, 2021
+title: September 04, 2021
 number: 1284
-label1: New England Aster<br> Whitefield -- HNE
+label1: New England Aster<br> Whitefield, NH -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/eqIOgJT.jpeg
-mouse1: NH
+mouse1: 
 image2: 
 mouse2: 
 ---
