--- a/_posts/2021-09-05-1285.html
+++ b/_posts/2021-09-05-1285.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  05, 2021
+title: September 05, 2021
 number: 1285
-label1: Mourning Dove<br> Whitefield -- HNE
+label1: Mourning Dove<br> Whitefield, NH -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/rYbPR47.jpeg
-mouse1: NH
+mouse1: 
 image2: 
 mouse2: 
 ---
