--- a/_posts/2021-09-09-1289.html
+++ b/_posts/2021-09-09-1289.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  09, 2021
+title: September 09, 2021
 number: 1289
-label1: Jewelweed<br> Burlington -- HNE
+label1: Jewelweed<br> Burlington, VT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/m5AfODR.jpeg
-mouse1: VT
+mouse1: 
 image2: 
 mouse2: 
 ---
