--- a/_posts/2021-09-10-1290.html
+++ b/_posts/2021-09-10-1290.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  10, 2021
+title: September 10, 2021
 number: 1290
-label1: Gray Catbird<br> Burlington -- HNE
+label1: Gray Catbird<br> Burlington, VT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/odHNraz.jpeg
-mouse1: VT
+mouse1: 
 image2: 
 mouse2: 
 ---
