--- a/_posts/2021-09-11-1291.html
+++ b/_posts/2021-09-11-1291.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  11, 2021
+title: September 11, 2021
 number: 1291
-label1: Lesser Yellowlegs<br> Burlington -- HNE
+label1: Lesser Yellowlegs<br> Burlington, VT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/cdNYLdf.jpeg
-mouse1: VT
+mouse1: 
 image2: 
 mouse2: 
 ---
