--- a/_posts/2021-07-05-1223.html
+++ b/_posts/2021-07-05-1223.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: three in one day 05, 2021
+title: July 05, 2021
 number: 1223
-label1: American Crow feather<br> Vancouver -- HNE
+label1: American Crow feather<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/3L356FA.jpg
-mouse1: BC
-image2: July
+mouse1: 
+image2: 
 mouse2: 
 ---
