--- a/_posts/2021-07-06-1224.html
+++ b/_posts/2021-07-06-1224.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  06, 2021
+title: July 06, 2021
 number: 1224
-label1: Barred Owl<br> North Vancouver -- HNE
+label1: Barred Owl<br> North Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/mpvHR0l.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
