--- a/_posts/2021-07-11-1229.html
+++ b/_posts/2021-07-11-1229.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  11, 2021
+title: July 11, 2021
 number: 1229
-label1: Eurasian Collared-dove<br> Vancouver -- HNE
+label1: Eurasian Collared-dove<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/LhThrcJ.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
