--- a/_posts/2021-07-12-1230.html
+++ b/_posts/2021-07-12-1230.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  12, 2021
+title: July 12, 2021
 number: 1230
-label1: Shrubby St. John&#39s Wort<br> Vancouver -- HNE
+label1: Shrubby St. John&#39s Wort<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/JHdPPmg.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
