--- a/_posts/2021-07-13-1231.html
+++ b/_posts/2021-07-13-1231.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  13, 2021
+title: July 13, 2021
 number: 1231
-label1: American Crow <br> Vancouver -- HNE
+label1: American Crow <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/2LSxzfn.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
