--- a/_posts/2021-07-14-1232.html
+++ b/_posts/2021-07-14-1232.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  14, 2021
+title: July 14, 2021
 number: 1232
-label1: Southern Magnolia<br> Vancouver -- HNE
+label1: Southern Magnolia<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/fLgnSrJ.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
