--- a/_posts/2021-07-19-1237.html
+++ b/_posts/2021-07-19-1237.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  19, 2021
+title: July 19, 2021
 number: 1237
-label1: Black-capped Chickadee<br> Vancouver -- HNE
+label1: Black-capped Chickadee<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/mVFQWoa.jpg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
