--- a/_posts/2021-07-21-1239.html
+++ b/_posts/2021-07-21-1239.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: So many memories of walking on the cast off, wet flowers of these plants  21, 2021
+title: July 21, 2021
 number: 1239
-label1: Hollyhock <br> Vancouver -- HNE
+label1: Hollyhock <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/QU4Uspl.jpeg
-mouse1: BC
+mouse1: So many memories of walking on the cast off, wet flowers of these plants 
 image2: 
 mouse2: 
 ---
