--- a/_posts/2021-07-26-1244.html
+++ b/_posts/2021-07-26-1244.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  26, 2021
+title: July 26, 2021
 number: 1244
-label1: Anna&#39s Hummingbird<br> Vancouver -- HNE
+label1: Anna&#39s Hummingbird<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/6W2vMBZ.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
