--- a/_posts/2021-08-05-1254.html
+++ b/_posts/2021-08-05-1254.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  05, 2021
+title: August 05, 2021
 number: 1254
-label1: California Gull<br> Vancouver -- HNE
+label1: California Gull<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/mnaEgqI.jpeg
-mouse1: BC
+mouse1: 
 image2: 
 mouse2: 
 ---
