--- a/_posts/2021-08-09-1258.html
+++ b/_posts/2021-08-09-1258.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  09, 2021
+title: August 09, 2021
 number: 1258
-label1: Common Nighthawk<br> Farmer -- HNE
+label1: Common Nighthawk<br> Farmer, WA -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/EZanCdC.jpeg
-mouse1: WA
+mouse1: 
 image2: 
 mouse2: 
 ---
