--- a/_posts/2021-08-12-1261.html
+++ b/_posts/2021-08-12-1261.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  12, 2021
+title: August 12, 2021
 number: 1261
-label1: Greater Sage-Grouse<br> Valier -- HNE
+label1: Greater Sage-Grouse<br> Valier, MT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/sRIfv7K.jpg
-mouse1: MT
+mouse1: 
 image2: 
 mouse2: 
 ---
