--- a/_posts/2021-08-16-1265.html
+++ b/_posts/2021-08-16-1265.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  16, 2021
+title: August 16, 2021
 number: 1265
-label1: Uinta Ground Squirrel<br> Island Park -- HNE
+label1: Uinta Ground Squirrel<br> Island Park, ID -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/AIcta6X.jpeg
-mouse1: ID
+mouse1: 
 image2: 
 mouse2: 
 ---
