--- a/_posts/2021-08-21-1270.html
+++ b/_posts/2021-08-21-1270.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  21, 2021
+title: August 21, 2021
 number: 1270
-label1: Canada Jay<br> Fraser -- HNE
+label1: Canada Jay<br> Fraser, CO -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/MPGfjRu.jpeg
-mouse1: CO
+mouse1: 
 image2: 
 mouse2: 
 ---
