--- a/_posts/2021-08-24-1273.html
+++ b/_posts/2021-08-24-1273.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  24, 2021
+title: August 24, 2021
 number: 1273
-label1: Common Grackle<br> Lincoln -- HNE
+label1: Common Grackle<br> Lincoln, NE -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/NtzVYwW.jpeg
-mouse1: NE
+mouse1: 
 image2: 
 mouse2: 
 ---
