--- a/_posts/2021-08-25-1274.html
+++ b/_posts/2021-08-25-1274.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  25, 2021
+title: August 25, 2021
 number: 1274
-label1: Warren Dunes<br> Berrian -- HNE
+label1: Warren Dunes<br> Berrian, MI -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/Aswqi6I.jpeg
-mouse1: MI
+mouse1: 
 image2: 
 mouse2: 
 ---
