--- a/_posts/2021-08-26-1275.html
+++ b/_posts/2021-08-26-1275.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  26, 2021
+title: August 26, 2021
 number: 1275
-label1: Ruby-throated Hummingbird<br> Lima Twp -- HNE
+label1: Ruby-throated Hummingbird<br> Lima Twp, MI -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/jTwGIYD.jpeg
-mouse1: MI
+mouse1: 
 image2: 
 mouse2: 
 ---
