--- a/_posts/2021-08-28-1277.html
+++ b/_posts/2021-08-28-1277.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  28, 2021
+title: August 28, 2021
 number: 1277
-label1: Northern Cardinal<br> Brighton -- HNE
+label1: Northern Cardinal<br> Brighton, MI -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/b9ke5b5.jpeg
-mouse1: MI
+mouse1: 
 image2: 
 mouse2: 
 ---
