--- a/_posts/2021-08-30-1279.html
+++ b/_posts/2021-08-30-1279.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  30, 2021
+title: August 30, 2021
 number: 1279
-label1: Tufted Titmouse<br> Lima Twp -- HNE
+label1: Tufted Titmouse<br> Lima Twp, MI -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/R5IXx0i.jpeg
-mouse1: MI
+mouse1: 
 image2: 
 mouse2: 
 ---
