--- a/_posts/2021-08-31-1280.html
+++ b/_posts/2021-08-31-1280.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  31, 2021
+title: August 31, 2021
 number: 1280
-label1: Asian Pear<br> Lima Twp -- HNE
+label1: Asian Pear<br> Lima Twp, MI -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/R5IXx0i.jpeg
-mouse1: MI
+mouse1: 
 image2: 
 mouse2: 
 ---
