--- a/_posts/2021-09-06-1286.html
+++ b/_posts/2021-09-06-1286.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  06, 2021
+title: September 06, 2021
 number: 1286
-label1: Sensitive Fern<br> Colchester -- HNE
+label1: Sensitive Fern<br> Colchester, VT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/HAMhRj8.jpeg
-mouse1: VT
+mouse1: 
 image2: 
 mouse2: 
 ---
