--- a/_posts/2021-09-07-1287.html
+++ b/_posts/2021-09-07-1287.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  07, 2021
+title: September 07, 2021
 number: 1287
-label1: Hairy Woodpecker<br> Colchester -- HNE
+label1: Hairy Woodpecker<br> Colchester, VT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/vPKEhFv.jpeg
-mouse1: VT
+mouse1: 
 image2: 
 mouse2: 
 ---
