--- a/_posts/2021-09-08-1288.html
+++ b/_posts/2021-09-08-1288.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  08, 2021
+title: September 08, 2021
 number: 1288
-label1: Northern Cardinal<br> Colchester -- HNE
+label1: Northern Cardinal<br> Colchester, VT -- HNE
 label2: <br>  -- AME
 image1: https://i.imgur.com/k1GwrFV.jpeg
-mouse1: VT
+mouse1: 
 image2: 
 mouse2: 
 ---
