--- a/_posts/2021-10-06-1316.html
+++ b/_posts/2021-10-06-1316.html
@@ -4,7 +4,7 @@ title: October 06, 2021
 number: 1316
 label1: Nelson&#39s Sparrow<br> Colchester, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/Nx9275R.jpeg
+image1: https://i.imgur.com/hvyEIzW.jpeg
 mouse1: 
 image2: 
 mouse2: 
