--- a/_posts/2021-09-12-1292.html
+++ b/_posts/2021-09-12-1292.html
@@ -2,9 +2,9 @@
 layout: default
 title: September 12, 2021
 number: 1292
-label1: Red-breasted Merganser<br> Colchester, VT -- HNE
+label1: Common Merganser<br> Colchester, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/4Js6evJ.jpeg
+image1: https://i.imgur.com/0v2EKSK.jpeg
 mouse1: 
 image2: 
 mouse2: 
