--- a/_posts/2021-09-19-1299.html
+++ b/_posts/2021-09-19-1299.html
@@ -4,7 +4,7 @@ title: September 19, 2021
 number: 1299
 label1: Bicknell&#39s Thrush<br> Camel hump, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/ke9sFHT.jpeg
+image1: https://i.imgur.com/0v2EKSK.jpeg
 mouse1: 
 image2: 
 mouse2: 
