--- a/_posts/2021-09-26-1306.html
+++ b/_posts/2021-09-26-1306.html
@@ -4,7 +4,7 @@ title: September 26, 2021
 number: 1306
 label1: Canada Goose<br> Colchester, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/4Js6evJ.jpeg
+image1: https://i.imgur.com/0v2EKSK.jpeg
 mouse1: 
 image2: 
 mouse2: 
