--- a/_posts/2021-09-12-1292.html
+++ b/_posts/2021-09-12-1292.html
@@ -4,7 +4,7 @@ title: September 12, 2021
 number: 1292
 label1: Common Merganser<br> Colchester, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/0v2EKSK.jpeg
+image1: https://i.imgur.com/rOQGgLR.jpeg
 mouse1: 
 image2: 
 mouse2: 
