--- a/_posts/2021-09-17-1297.html
+++ b/_posts/2021-09-17-1297.html
@@ -4,7 +4,7 @@ title: September 17, 2021
 number: 1297
 label1: Red Maple<br> Colchester, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/0v2EKSK.jpeg
+image1: https://i.imgur.com/Lem7wTX.jpeg
 mouse1: 
 image2: 
 mouse2: 
