--- a/_posts/2021-09-27-1307.html
+++ b/_posts/2021-09-27-1307.html
@@ -4,7 +4,7 @@ title: September 27, 2021
 number: 1307
 label1: White-rumped Sandpiper<br> Colchester, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/4Js6evJ.jpeg
+image1: https://i.imgur.com/nvOSwE6.jpeg
 mouse1: Foraging with a group of Sanderling
 image2: 
 mouse2: 
