--- a/_posts/2021-10-02-1312.html
+++ b/_posts/2021-10-02-1312.html
@@ -4,7 +4,7 @@ title: October 02, 2021
 number: 1312
 label1: Black-throated Blue Warbler and SnappingTurtle <br> Door, WI -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/hvyEIzW.jpeg
+image1: https://i.imgur.com/NIBpIXQ.jpeg
 mouse1: 
 image2: 
 mouse2: 
