--- a/_posts/2021-09-18-1298.html
+++ b/_posts/2021-09-18-1298.html
@@ -4,7 +4,7 @@ title: September 18, 2021
 number: 1298
 label1: White Baneberry<br> Colchester, VT -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/ke9sFHT.jpeg
+image1: https://i.imgur.com/CEJg6Z3.jpeg
 mouse1: 
 image2: 
 mouse2: 
