--- a/_posts/2021-11-08-1349.html
+++ b/_posts/2021-11-08-1349.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  08, 2021
+title: November 08, 2021
 number: 1349
 label1: Ring-billed Gull<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
