--- a/_posts/2021-11-15-1356.html
+++ b/_posts/2021-11-15-1356.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  15, 2021
+title: November 15, 2021
 number: 1356
 label1: Cattail<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
