--- a/_posts/2021-11-16-1357.html
+++ b/_posts/2021-11-16-1357.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  16, 2021
+title: November 16, 2021
 number: 1357
 label1: White-throated Sparrow<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
