--- a/_posts/2021-11-18-1359.html
+++ b/_posts/2021-11-18-1359.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  18, 2021
+title: November 18, 2021
 number: 1359
 label1: Cactus Wren<br> Maricopa, AZ -- HNE
 label2: <br>  -- AME
