--- a/_posts/2021-11-19-1360.html
+++ b/_posts/2021-11-19-1360.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  19, 2021
+title: November 19, 2021
 number: 1360
 label1: Williamson&#39s Sapsucker<br> Greer, AZ -- HNE
 label2: <br>  -- AME
