--- a/_posts/2021-11-20-1361.html
+++ b/_posts/2021-11-20-1361.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  20, 2021
+title: November 20, 2021
 number: 1361
 label1: Dark-eyed Junco<br> Greer, AZ -- HNE
 label2: <br>  -- AME
