--- a/_posts/2021-11-23-1364.html
+++ b/_posts/2021-11-23-1364.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title:  23, 2021
+title: November 23, 2021
 number: 1364
 label1: Costa&#39s Hummingbird<br> Maricopa, AZ -- HNE
 label2: <br>  -- AME
-image1: 
+image1: https://i.imgur.com/Y3Gi0AU.jpeg
 mouse1: 
 image2: 
 mouse2: 
