--- a/_posts/2021-11-24-1365.html
+++ b/_posts/2021-11-24-1365.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  24, 2021
+title: November 24, 2021
 number: 1365
 label1: Gila Woodpecker and Gilded Flicker<br> Maricopa, AZ -- HNE
 label2: <br>  -- AME
