--- a/_posts/2021-11-26-1367.html
+++ b/_posts/2021-11-26-1367.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  26, 2021
+title: November 26, 2021
 number: 1367
 label1: Java Sparrow<br> Oahu, HI -- HNE
 label2: <br>  -- AME
