--- a/_posts/2021-11-28-1369.html
+++ b/_posts/2021-11-28-1369.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  28, 2021
+title: November 28, 2021
 number: 1369
 label1: Hwamei and Brown Booby<br> Kauai, HI  -- HNE
 label2: <br>  -- AME
