--- a/_posts/2021-11-29-1370.html
+++ b/_posts/2021-11-29-1370.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  29, 2021
+title: November 29, 2021
 number: 1370
 label1: Wandering Tattler<br> Kauai, HI  -- HNE
 label2: <br>  -- AME
