--- a/_posts/2021-12-02-1373.html
+++ b/_posts/2021-12-02-1373.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  02, 2021
+title: December 02, 2021
 number: 1373
 label1: Red-billed Leiothrix<br> Oahu, HI -- HNE
 label2: <br>  -- AME
