--- a/_posts/2021-12-04-1375.html
+++ b/_posts/2021-12-04-1375.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  04, 2021
+title: December 04, 2021
 number: 1375
 label1: Red-crowned Amazon<br> Oahu, HI -- HNE
 label2: <br>  -- AME
