--- a/_posts/2021-12-08-1379.html
+++ b/_posts/2021-12-08-1379.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  08, 2021
+title: December 08, 2021
 number: 1379
 label1: Juniper Titmouse <br> La Plata, CO -- HNE
 label2: <br>  -- AME
