--- a/_posts/2021-12-13-1384.html
+++ b/_posts/2021-12-13-1384.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  13, 2021
+title: December 13, 2021
 number: 1384
 label1: Herring Gull<br> Philadelpha, PA -- HNE
 label2: <br>  -- AME
