--- a/_posts/2021-12-15-1386.html
+++ b/_posts/2021-12-15-1386.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  15, 2021
+title: December 15, 2021
 number: 1386
 label1: Tufted Titmouse<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
