--- a/_posts/2021-12-17-1388.html
+++ b/_posts/2021-12-17-1388.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  17, 2021
+title: December 17, 2021
 number: 1388
 label1: Ruby-crowned Kinglet<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
