--- a/_posts/2021-12-19-1390.html
+++ b/_posts/2021-12-19-1390.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  19, 2021
+title: December 19, 2021
 number: 1390
 label1: Northern Cardinal<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
