--- a/_posts/2021-12-21-1392.html
+++ b/_posts/2021-12-21-1392.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  21, 2021
+title: December 21, 2021
 number: 1392
 label1: American Crow<br> Richmond Hill, ON -- HNE
 label2: <br>  -- AME
