--- a/_posts/2021-12-24-1395.html
+++ b/_posts/2021-12-24-1395.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  24, 2021
+title: December 24, 2021
 number: 1395
 label1: Peanut<br> Richmond Hill, ON -- HNE
 label2: <br>  -- AME
