--- a/_posts/2021-12-26-1397.html
+++ b/_posts/2021-12-26-1397.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  26, 2021
+title: December 26, 2021
 number: 1397
 label1: Eastern Gray Squirrel<br> Richmond Hill, ON -- HNE
 label2: <br>  -- AME
