--- a/_posts/2021-11-09-1350.html
+++ b/_posts/2021-11-09-1350.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  09, 2021
+title: November 09, 2021
 number: 1350
 label1: Mallard<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
