--- a/_posts/2021-11-10-1351.html
+++ b/_posts/2021-11-10-1351.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  10, 2021
+title: November 10, 2021
 number: 1351
 label1: Hairy Woodpecker<br> Montreal, QC -- HNE
 label2: <br>  -- AME
