--- a/_posts/2021-11-11-1352.html
+++ b/_posts/2021-11-11-1352.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  11, 2021
+title: November 11, 2021
 number: 1352
 label1: Snow &#39Blue&#39 Goose<br> QC -- HNE
 label2: <br>  -- AME
