--- a/_posts/2021-11-12-1353.html
+++ b/_posts/2021-11-12-1353.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  12, 2021
+title: November 12, 2021
 number: 1353
 label1: Red Maple<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
