--- a/_posts/2021-11-13-1354.html
+++ b/_posts/2021-11-13-1354.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  13, 2021
+title: November 13, 2021
 number: 1354
 label1: Eastern Bluebird<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
