--- a/_posts/2021-11-14-1355.html
+++ b/_posts/2021-11-14-1355.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  14, 2021
+title: November 14, 2021
 number: 1355
 label1: Eastern Bluebird<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
