--- a/_posts/2021-11-17-1358.html
+++ b/_posts/2021-11-17-1358.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  17, 2021
+title: November 17, 2021
 number: 1358
 label1: House Sparrow<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
