--- a/_posts/2021-11-21-1362.html
+++ b/_posts/2021-11-21-1362.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  21, 2021
+title: November 21, 2021
 number: 1362
 label1: Verdin<br> Maricopa, AZ -- HNE
 label2: <br>  -- AME
