--- a/_posts/2021-11-22-1363.html
+++ b/_posts/2021-11-22-1363.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  22, 2021
+title: November 22, 2021
 number: 1363
 label1: Black-throated Sparrow<br> Maricopa, AZ -- HNE
 label2: <br>  -- AME
