--- a/_posts/2021-11-25-1366.html
+++ b/_posts/2021-11-25-1366.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  25, 2021
+title: November 25, 2021
 number: 1366
 label1: Javelina<br> Maricopa, AZ -- HNE
 label2: <br>  -- AME
