--- a/_posts/2021-11-27-1368.html
+++ b/_posts/2021-11-27-1368.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  27, 2021
+title: November 27, 2021
 number: 1368
 label1: Great Frigatebird<br> Kauai, HI  -- HNE
 label2: <br>  -- AME
