--- a/_posts/2021-11-30-1371.html
+++ b/_posts/2021-11-30-1371.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  30, 2021
+title: November 30, 2021
 number: 1371
 label1: Chestnut Munia<br> Kauai, HI  -- HNE
 label2: <br>  -- AME
