--- a/_posts/2021-12-01-1372.html
+++ b/_posts/2021-12-01-1372.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  01, 2021
+title: December 01, 2021
 number: 1372
 label1: Red-vented Bulbul<br> Oahu, HI -- HNE
 label2: <br>  -- AME
