--- a/_posts/2021-12-03-1374.html
+++ b/_posts/2021-12-03-1374.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  03, 2021
+title: December 03, 2021
 number: 1374
 label1: Nene<br> Oahu, HI -- HNE
 label2: <br>  -- AME
