--- a/_posts/2021-12-05-1376.html
+++ b/_posts/2021-12-05-1376.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  05, 2021
+title: December 05, 2021
 number: 1376
 label1: Greater Roadrunner, Snow Goose, Ross&#39s Goose, and Woodrat<br> Bosque del Apache NWR, NM -- HNE
 label2: <br>  -- AME
