--- a/_posts/2021-12-06-1377.html
+++ b/_posts/2021-12-06-1377.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  06, 2021
+title: December 06, 2021
 number: 1377
 label1: Eurasian Collared-dove<br> La Plata, CO -- HNE
 label2: <br>  -- AME
