--- a/_posts/2021-12-07-1378.html
+++ b/_posts/2021-12-07-1378.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  07, 2021
+title: December 07, 2021
 number: 1378
 label1: Bushtit<br> La Plata, CO -- HNE
 label2: <br>  -- AME
