--- a/_posts/2021-12-09-1380.html
+++ b/_posts/2021-12-09-1380.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  09, 2021
+title: December 09, 2021
 number: 1380
 label1: Lewis&#39s Woodpecker<br> La Plata, CO -- HNE
 label2: <br>  -- AME
