--- a/_posts/2021-12-10-1381.html
+++ b/_posts/2021-12-10-1381.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  10, 2021
+title: December 10, 2021
 number: 1381
 label1: Rock Pigeon<br> Las Vegas, NV -- HNE
 label2: <br>  -- AME
