--- a/_posts/2021-12-11-1382.html
+++ b/_posts/2021-12-11-1382.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  11, 2021
+title: December 11, 2021
 number: 1382
 label1: Harbor Seal<br> San Francisco, CA -- HNE
 label2: <br>  -- AME
