--- a/_posts/2021-12-12-1383.html
+++ b/_posts/2021-12-12-1383.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  12, 2021
+title: December 12, 2021
 number: 1383
 label1: Black Phoebe<br> San Francisco, CA -- HNE
 label2: <br>  -- AME
