--- a/_posts/2021-12-14-1385.html
+++ b/_posts/2021-12-14-1385.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  14, 2021
+title: December 14, 2021
 number: 1385
 label1: Tufted Titmouse<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
