--- a/_posts/2021-12-16-1387.html
+++ b/_posts/2021-12-16-1387.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  16, 2021
+title: December 16, 2021
 number: 1387
 label1: Yellow-shafted Flicker<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
