--- a/_posts/2021-12-18-1389.html
+++ b/_posts/2021-12-18-1389.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  18, 2021
+title: December 18, 2021
 number: 1389
 label1: Wild Turkey<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
