--- a/_posts/2021-12-20-1391.html
+++ b/_posts/2021-12-20-1391.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  20, 2021
+title: December 20, 2021
 number: 1391
 label1: Sunset <br> South Burlington, VT -- HNE
 label2: <br>  -- AME
