--- a/_posts/2021-12-22-1393.html
+++ b/_posts/2021-12-22-1393.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  22, 2021
+title: December 22, 2021
 number: 1393
 label1: Northern Cardinal<br> South Burlington, VT -- HNE
 label2: <br>  -- AME
