--- a/_posts/2021-12-23-1394.html
+++ b/_posts/2021-12-23-1394.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  23, 2021
+title: December 23, 2021
 number: 1394
 label1: American Kestrel<br> Richmond Hill, ON -- HNE
 label2: <br>  -- AME
