--- a/_posts/2021-12-25-1396.html
+++ b/_posts/2021-12-25-1396.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  25, 2021
+title: December 25, 2021
 number: 1396
 label1: Boxelder<br> Richmond Hill, ON -- HNE
 label2: <br>  -- AME
