--- a/_posts/2020-09-18-933.html
+++ b/_posts/2020-09-18-933.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  18, 2020
+title:  September 18, 2020
 number: 933
 label1: Yew<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
