--- a/_posts/2020-09-19-934.html
+++ b/_posts/2020-09-19-934.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  19, 2020
+title:  September 19, 2020
 number: 934
 label1: Wilson&#39s Warbler<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
