--- a/_posts/2020-09-20-935.html
+++ b/_posts/2020-09-20-935.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  20, 2020
+title:  September 20, 2020
 number: 935
 label1: Western Sandpiper<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
