--- a/_posts/2020-09-21-936.html
+++ b/_posts/2020-09-21-936.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  21, 2020
+title:  September 21, 2020
 number: 936
 label1: Slug <i> Ariolimax sp </i> <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
