--- a/_posts/2020-09-22-937.html
+++ b/_posts/2020-09-22-937.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: September 22, 
+title: September 22, 2020
 number: 937
 label1: Hawthorn <i> Crataegus mordensis </i> Snowbird<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
