--- a/_posts/2020-09-23-938.html
+++ b/_posts/2020-09-23-938.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: September 23, 
+title: September 23, 2020
 number: 938
 label1: Rose <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
