--- a/_posts/2020-09-24-939.html
+++ b/_posts/2020-09-24-939.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: September 24, 
+title: September 24, 2020
 number: 939
 label1: Kits beach<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
