--- a/_posts/2020-09-13-928.html
+++ b/_posts/2020-09-13-928.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  13, 2020
+title:  Septembber 13, 2020
 number: 928
 label1: Dogwood<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
