--- a/_posts/2020-09-14-929.html
+++ b/_posts/2020-09-14-929.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  14, 2020
+title:  September 14, 2020
 number: 929
 label1: Yellow Warbler<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
