--- a/_posts/2020-09-16-931.html
+++ b/_posts/2020-09-16-931.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  16, 2020
+title:  September 16, 2020
 number: 931
 label1: American Crow <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
