--- a/_posts/2020-09-17-932.html
+++ b/_posts/2020-09-17-932.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  17, 2020
+title:  September 17, 2020
 number: 932
 label1: Red-breasted Sapsucker<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
