troubleshooting next button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layout: last
 <li><a href="./1">|&lt;</a></li>
 <li><a rel="prev" href= "./{{ post.number| minus: 1}}" accesskey="p">&lt; Prev</a></li>
 <li><a href="../random">Random</a></li> 
-<li><a rel="next" href= "./" accesskey="p"> Next &gt;</a></li>
+<li><a rel="next" href= "./{{ post.number| plus: 1}}" accesskey="p"> Next &gt;</a></li>
 <li><a href="./">&gt;|</a></li>
 </ul>
 
