--- a/_posts/2021-07-01-1219.html
+++ b/_posts/2021-07-01-1219.html
@@ -4,7 +4,7 @@ title: July 01, 2021
 number: 1219
 label1: Evening Grosbeak<br> Birkendhead Lake, BC -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/H9EB7Pr.jpeg
+image1: https://i.imgur.com/yyMhLVT.jpeg
 mouse1: 
 image2: 
 mouse2: 
